@@ -89,6 +89,16 @@
 #include <R_ext/RS.h> /* for test of S4 objects */
 #include <R_ext/Itermacros.h>
 
+/* The SET_STDVEC_LENGTH macro is used to modify the length of
+   growable vectors. This would need to change to allow ALTREP vectors to
+   grow in place.
+
+   SETLENGTH is used when checking the write barrier.
+   Always using SETLENGTH would be OK but maybe a little less efficient. */
+#ifndef SET_STDVEC_LENGTH
+# define SET_STDVEC_LENGTH(x, v) SETLENGTH(x, v)
+#endif
+
 /* This version of SET_VECTOR_ELT does not increment the REFCNT for
    the new vector->element link. It assumes that the old vector is
    becoming garbage and so it's references become no longer
@@ -148,8 +158,8 @@ static SEXP EnlargeVector(SEXP x, R_xlen_t newlen)
        increase its length */
     if (! MAYBE_SHARED(x) &&
 	IS_GROWABLE(x) &&
-	TRUELENGTH(x) >= newlen) {
-	SETLENGTH(x, newlen);
+	XTRUELENGTH(x) >= newlen) {
+	SET_STDVEC_LENGTH(x, newlen);
 	names = getNames(x);
 	if (!isNull(names)) {
 	    SEXP newnames = EnlargeNames(names, len, newlen);
@@ -181,11 +191,13 @@ static SEXP EnlargeVector(SEXP x, R_xlen_t newlen)
 
     /**** for now, don't cross the long vector boundary; drop when
 	  ALTREP is merged */
+/*
 #ifdef ALTREP
 #error drop the limitation to short vectors
 #endif
-    if (newtruelen > R_LEN_T_MAX) newtruelen = newlen;
 
+    if (newtruelen > R_LEN_T_MAX) newtruelen = newlen;
+*/
     PROTECT(x);
     PROTECT(newx = allocVector(TYPEOF(x), newtruelen));
 
@@ -237,7 +249,7 @@ static SEXP EnlargeVector(SEXP x, R_xlen_t newlen)
     if (newlen < newtruelen) {
 	SET_GROWABLE_BIT(newx);
 	SET_TRUELENGTH(newx, newtruelen);
-	SETLENGTH(newx, newlen);
+	SET_STDVEC_LENGTH(newx, newlen);
     }
 
     /* Adjust the attribute list. */
